Division en paginas

--- a/ExampleFinkok/Pages/Index.cshtml
+++ b/ExampleFinkok/Pages/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
-    string responseInvoice = (string)ViewData["ResposeInvoice"];
+    ViewData["Title"] = "Timbrar una factura";
+    
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>@responseInvoice</p>
+    
 </div>
