--- a/ExampleFinkok/Pages/Finkok/Cancelation.cshtml
+++ b/ExampleFinkok/Pages/Finkok/Cancelation.cshtml
@@ -1,4 +1,20 @@
 ﻿@page
 @model ExampleFinkok.Pages.Finkok.CancelationModel
 @{
+    string responseInvoice = (string)ViewData["ResposeInvoice"];
 }
+<form method="post">
+    De click para enviar su factura
+    <div>
+        <input type="text"  name="uuidToCancel"/>
+    </div>
+    <div>
+        <button type="submit">Timbrar Factura</button>
+    </div>
+    
+</form>
+
+<div>
+
+<p>@responseInvoice</p>
+</div>
