Modificacion de metodos de cancelacion y funciones totales de finkok

--- a/ExampleFinkok/Pages/Factureya/CreateXML.cshtml
+++ b/ExampleFinkok/Pages/Factureya/CreateXML.cshtml
@@ -1,8 +1,10 @@
 ﻿@page
-@model ExampleFinkok.Pages.Finkok.CreateXMLModel
+@model ExampleFinkok.Pages.Factureya.CreateXMLModel
 @{
     string responseInvoice = (string)ViewData["ResposeInvoice"];
 }
+
+
 <form method="post">
     De click para generar xml 4.0 de su factura
     <button type="submit">Generar XML</button>
